<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res‐auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="265dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@+id/ivGallery"
        android:layout_centerInParent="true"
        android:ems="10"
        android:text="" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLat"
        android:layout_alignLeft="@id/ivGallery"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <TextView
        android:id="@+id/tvLat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTimestamp"
        android:layout_alignLeft="@+id/etCaption"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:text="" />

    <TextView
        android:id="@+id/tvLong"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTimestamp"
        android:layout_alignRight="@+id/etCaption"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:text="" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_alignRight="@+id/etCaption"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:onClick="scrollPhotos"
        android:text="next" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_alignLeft="@+id/etCaption"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:onClick="scrollPhotos"
        android:text="prev" />

    <Button
        android:id="@+id/snap"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:onClick="takePhoto"
        android:text="Snap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
         />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="startSearchActivity"
        android:text="search" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:onClick="startShareActivity"
        android:text="Share" />


</RelativeLayout>