<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res‐auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCancel"
        android:layout_alignBottom="@+id/etFromDateTime"
        android:text="From: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:text="To: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/tvKeywords" android:text="Keywords: "
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime" android:layout_centerVertical="true"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvToDateTime"
        android:layout_marginTop="50dp"
        android:text="Location:"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLocationLat"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etToDateTime"
        android:layout_marginStart="3dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/tvLocation"
        android:ems="10"
        android:hint="Latitute"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLocationLong"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="-1dp"
        android:layout_toEndOf="@+id/etLocationLat"
        android:ems="10"
        android:hint="Longitute"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel" android:text="Cancel" android:onClick="cancel"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />
    <Button
        android:id="@+id/go" android:onClick="go" android:text="Go"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="128dp" />


</RelativeLayout>